--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,9 +5,13 @@ body,
     background: white;
     padding: 1em;
 }
+/* Side panel */
+.menu {
+    padding-bottom: "2em";
+}
 /* Messages */
 .messages {
-    height: 600px;
+    height: 68vh;
     overflow-y: scroll;
 }
 /* MessagesForm */
@@ -19,4 +23,15 @@ body,
     right: 1em;
     z-index: 200;
 
+}
+.message__self {
+    border-left: 2px solid blue;
+    padding-left: 8px;
+}
+
+.message__image {
+    padding: 1em;
+}
+.progress__bar {
+    margin: 0.3em 0 0 !important;
 }
