--- a/src/components/App.css
+++ b/src/components/App.css
@@ -37,12 +37,12 @@ body,
 }
 /* ColorPicker */
 .color__container {
+    cursor: pointer;
     position: relative;
     overflow: hidden;
     width: 35px;
     border-radius: 3px
 }
-
 .color__square {
     width: 35px;
     height: 35px;
