--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,6 +14,10 @@ body,
     height: 68vh;
     overflow-y: scroll;
 }
+
+.emojipicker {
+    position: absolute;
+}
 /* MessagesForm */
 .message__form {
     position: fixed !important;
